Project LB-ASG/3-igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "main_IG"
    Service = "application1"
    Owner   = "Chris"
    State   = "Alabama"
  }
}
